Added Reader_ODETest needs debugging

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,6 +10,10 @@ find_package(GTest REQUIRED)
 # Include directories for Google Test and your project
 include_directories(${GTEST_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/../include)
 
+######################################
+## FUNCTION COMPONENT
+######################################
+
 # Add your source files
 set(SOURCES_FUNCTIONCOMPONENT
         FunctionComponentTest.cpp
@@ -27,6 +31,10 @@ set_target_properties(FunctionComponentTests PROPERTIES
         RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
 )
 
+######################################
+## FUNCTION
+######################################
+
 # Add your source files
 set(SOURCES_FUNCTION
         FunctionTest.cpp
@@ -43,5 +51,32 @@ target_link_libraries(FunctionTests gtest_main ${GTEST_BOTH_LIBRARIES} pthread)
 
 # Set the output directory for the executable (optional)
 set_target_properties(FunctionTests PROPERTIES
+        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
+)
+
+######################################
+## READER
+######################################
+
+# Add your source files
+set(SOURCES_READER_ODE
+        Reader_ODETest.cpp
+        ../src/Reader/Reader.cpp
+        ../src/Reader/Reader_ODE.cpp
+        ../src/Function/Function.cpp
+        ../src/FunctionComponent/FunctionComponent.cpp
+        ../src/Problem/Problem.cpp
+        ../src/Problem/Problem_ODE.cpp
+        ../src/Solver/DiscreteSolver.cpp
+)
+
+# Create an executable for the tests
+add_executable(ReaderODETests ${SOURCES_READER_ODE})
+
+# Link against Google Test and pthread
+target_link_libraries(ReaderODETests gtest_main ${GTEST_BOTH_LIBRARIES} pthread)
+
+# Set the output directory for the executable (optional)
+set_target_properties(ReaderODETests PROPERTIES
         RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
 )
