Output tests + debugging

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,4 +6,4 @@ add_subdirectory(Solver)
 add_subdirectory(FunctionComponent)
 add_subdirectory(Function)
 
-target_include_directories(ODE_LIB PUBLIC ${PROJECT_SOURCE_DIR}/include)
+target_include_directories(ODE_LIB PUBLIC ${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/gnuplot-iostream)
