--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,10 +2,17 @@ cmake_minimum_required(VERSION 3.16)
 project(tests)
 
 # Set the C++ standard
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 
 # Find Google Test
 find_package(GTest REQUIRED)
+
+# find dependencies (Boost)
+find_package(Boost REQUIRED COMPONENTS
+        iostreams system filesystem
+)
+# adds the search path for includes
+include_directories(${PROJECT_SOURCE_DIR}/../gnuplot-iostream)
 
 # Include directories for Google Test and your project
 include_directories(${GTEST_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/../include)
@@ -55,7 +62,7 @@ set_target_properties(FunctionTests PROPERTIES
 )
 
 ######################################
-## READER
+## READER ODE
 ######################################
 
 # Add your source files
@@ -78,5 +85,58 @@ target_link_libraries(ReaderODETests gtest_main ${GTEST_BOTH_LIBRARIES} pthread)
 
 # Set the output directory for the executable (optional)
 set_target_properties(ReaderODETests PROPERTIES
+        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
+)
+
+
+######################################
+## FILE OUTPUT
+######################################
+
+# Add your source files
+set(SOURCES_FILE_OUTPUT
+        FileOutputTest.cpp
+        ../src/Output/FileOutput.cpp
+        ../src/Output/AbstractOutput.cpp
+)
+
+# Create an executable for the tests
+add_executable(FileOutputTests ${SOURCES_FILE_OUTPUT})
+
+# Link against Google Test and pthread
+target_link_libraries(FileOutputTests gtest_main ${GTEST_BOTH_LIBRARIES} pthread)
+
+# Set the output directory for the executable (optional)
+set_target_properties(FileOutputTests PROPERTIES
+        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
+)
+
+######################################
+## GRAPH OUTPUT
+######################################
+
+# Add your source files
+set(SOURCES_GRAPH_OUTPUT
+        GraphOutputTest.cpp
+        ../src/Output/GraphOutput.cpp
+        ../src/Output/FileOutput.cpp
+        ../src/Output/AbstractOutput.cpp
+)
+
+# Create an executable for the tests
+add_executable(GraphOutputTests ${SOURCES_GRAPH_OUTPUT})
+
+# Link against Google Test and pthread
+target_link_libraries(GraphOutputTests
+        gtest_main
+        ${GTEST_BOTH_LIBRARIES}
+        pthread
+        Boost::iostreams
+        Boost::system
+        Boost::filesystem
+)
+
+# Set the output directory for the executable (optional)
+set_target_properties(GraphOutputTests PROPERTIES
         RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
 )
