--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,8 +4,15 @@ project(tests)
 # Set the C++ standard
 set(CMAKE_CXX_STANDARD 17)
 
-# Find Google Test
-find_package(GTest REQUIRED)
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  # Specify the commit you depend on and update it regularly.
+  URL https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip
+)
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
 
 # find dependencies (Boost)
 find_package(Boost REQUIRED COMPONENTS
@@ -15,7 +22,7 @@ find_package(Boost REQUIRED COMPONENTS
 include_directories(${PROJECT_SOURCE_DIR}/../gnuplot-iostream)
 
 # Include directories for Google Test and your project
-include_directories(${GTEST_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/../include)
+include_directories(${PROJECT_SOURCE_DIR}/../include)
 
 ######################################
 ## FUNCTION COMPONENT
