Main needs debugging after input problem
Probably something goes wrong with the dynamic casting

--- a/src/Solver/CMakeLists.txt
+++ b/src/Solver/CMakeLists.txt
@@ -1,4 +1,5 @@
 target_sources(ODE_LIB PRIVATE
+        DiscreteSolver.cpp
         AdamBashforthSolver.cpp
         BackwardEulerSolver.cpp
         ForwardEulerSolver.cpp
