--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -147,30 +147,30 @@ set_target_properties(FileOutputTests PROPERTIES
 ######################################
 
 # Add your source files
-#set(SOURCES_GRAPH_OUTPUT
-#        GraphOutputTest.cpp
-#        ../src/Output/GraphOutput.cpp
-#        ../src/Output/FileOutput.cpp
-#        ../src/Output/AbstractOutput.cpp
-#)
+set(SOURCES_GRAPH_OUTPUT
+        GraphOutputTest.cpp
+        ../src/Output/GraphOutput.cpp
+        ../src/Output/FileOutput.cpp
+        ../src/Output/AbstractOutput.cpp
+)
 
 # Create an executable for the tests
-#add_executable(GraphOutputTests ${SOURCES_GRAPH_OUTPUT})
+add_executable(GraphOutputTests ${SOURCES_GRAPH_OUTPUT})
 
 # Link against Google Test and pthread
-#target_link_libraries(GraphOutputTests
-#        gtest_main
-#        ${GTEST_BOTH_LIBRARIES}
-#        pthread
-#        Boost::iostreams
-#        Boost::system
-#        Boost::filesystem
-#)
+target_link_libraries(GraphOutputTests
+        gtest_main
+        ${GTEST_BOTH_LIBRARIES}
+        pthread
+        Boost::iostreams
+        Boost::system
+        Boost::filesystem
+)
 
 # Set the output directory for the executable (optional)
-#set_target_properties(GraphOutputTests PROPERTIES
-        #RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
-#)
+set_target_properties(GraphOutputTests PROPERTIES
+        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
+)
 
 ######################################
 ## SOLVERS
